--- a/src/main/java/com/appkit/ui/client/widgets/button/button.css
+++ b/src/main/java/com/appkit/ui/client/widgets/button/button.css
@@ -10,7 +10,7 @@
     font-size: 13px;
     line-height: 14px;
     box-sizing: border-box;
-    height: 27px;
+    height: 28px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -39,14 +39,13 @@
     width: 100%;
     display: table;
     text-align: center;
-    box-sizing: border-box;
+    border-collapse: separate;
     border-spacing: 0;
     padding: 0 5px 0 0px;
 
 }
 
 .appkit-Button-title {
-
     display: table-cell;
     vertical-align: middle;
     -webkit-touch-callout: none;
@@ -63,13 +62,25 @@
     display: table-cell;
     text-align: left;
     padding-left: 4px;
+    padding-top: 1px;
+    width: 100%;
 
+}
+
+.appkit-Button-image img {
+    vertical-align: middle;
 }
 
 @if user.agent gecko1_8 {
     .appkit-Button-title {
         line-height: 16px;
     }
+
+    .appkit-Button-image {
+        padding-top: 0px;
+    }
+
+
 }
 
 .appkit-ImageButton {
@@ -77,13 +88,17 @@
     padding: 0;
 }
 
-.appkit-ImageButton-image {
+.appkit-ImageButton .appkit-Button-content-wrap {
+    padding: 0;
+}
+
+.appkit-ImageButton .appkit-Button-image {
     box-sizing: border-box;
     vertical-align: middle;
     display: table-cell;
     text-align: center;
     padding-left: 0;
-    margin: 0;
+    padding-top: 0;
 }
 
 .appkit-Button.primary {
@@ -124,7 +139,7 @@
 
 .appkit-Button.inverse {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
-    background-color: #333;
+    background-color: #3f3f3f;
     border-color: #000;
     color: #ffffff;
 }
@@ -140,6 +155,7 @@
 
 .appkit-Button.link.appkit-state-active {
     color: #236590;
+    background-color: transparent;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
 }
@@ -162,14 +178,18 @@
     background-color: #3f74bf;
 }
 
+.appkit-Button.warning.appkit-state-active {
+    background-color: #c55206;
+
+}
+
 .appkit-Button.danger.appkit-state-active {
     background-color: #b01919;
 }
 
 .appkit-Button.inverse.appkit-state-active {
-    background-color: #e5e5e5;
-    color: #444;
-    border-color: #b0b0b0;
+    background-color: #616161;
+    border-color: #333;
 }
 
 .appkit-Button.success.appkit-state-active {
