--- a/src/main/java/com/appkit/ui/client/widgets/windowpanel/windowpanel.css
+++ b/src/main/java/com/appkit/ui/client/widgets/windowpanel/windowpanel.css
@@ -62,13 +62,13 @@
     width: 48px;
     height: 24px;
     min-height: 24px;
-    margin: 0 1px 0px 1px;
+    margin: 0px 1px 0px 1px;
     text-align: center;
     vertical-align: middle;
-    font-family: 'Cambria_', 'PT Serif Caption', Verdana, Arial, Helvetica, sans-serif;
-    font-size: 18pt;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 18px;
     font-weight: normal;
-    padding: 0 0 10px 0;
+    padding: 0px 0 10px 0;
     z-index: 3;
     cursor: pointer;
     box-sizing: border-box;
@@ -182,8 +182,8 @@
     content: '\D7';
     position: absolute;
     left: 50%;
-    top: -4px;
-    margin-left: -0.3em;
+    top: -1px;
+    margin-left: -0.4em;
 }
 
 .appkit-Window-panel-content {
