--- a/src/main/java/com/appkit/ui/client/widgets/button/button.css
+++ b/src/main/java/com/appkit/ui/client/widgets/button/button.css
@@ -1,7 +1,7 @@
 @external .appkit-state-active, .appkit-state-disabled;
 
 .appkit-Button {
-    padding: 4px 4px;
+    padding: 0;
     text-align: center;
     background-color: #f0f0f0;
     border: 1px solid #bbb;
@@ -14,16 +14,13 @@
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
-
     min-height: 10px;
-
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
-
     text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
     color: #333333;
 
@@ -41,7 +38,7 @@
     text-align: center;
     border-collapse: separate;
     border-spacing: 0;
-    padding: 0 5px 0 0px;
+    padding: 0;
 
 }
 
@@ -53,7 +50,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    padding: 0 6px 0 6px;
+    padding: 0;
 }
 
 .appkit-Button-image {
