--- a/src/main/java/com/appkit/ui/client/widgets/popover/popover.css
+++ b/src/main/java/com/appkit/ui/client/widgets/popover/popover.css
@@ -1,13 +1,16 @@
 .appkit-Popover {
     position: absolute !important;
     background: #fff;
-    margin: 2px 0 0;
+    margin: 0;
     padding: 2px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
     border: 1px solid #b0b0b0;
     z-index: 9999;
     border-radius: 5px;
     overflow: visible !important;
+    width: 100px;
+    height: 100px;
+    font-size: 13px;
 }
 
 .appkit-Popover-Arrow {
@@ -33,7 +36,7 @@
     content: "";
 }
 
-.appkit-Popover-Arrow.appkit-Popover-TopArrow {
+.appkit-Popover-Arrow.appkit-Popover-UpArrow {
     top: -11px;
     left: 50%;
     margin-left: -11px;
@@ -41,7 +44,7 @@
     border-top-width: 0;
 }
 
-.appkit-Popover-TopArrow:after {
+.appkit-Popover-UpArrow:after {
     content: " ";
     top: 1px;
     margin-left: -10px;
@@ -65,7 +68,7 @@
     border-right-color: #ffffff;
 }
 
-.appkit-Popover-Arrow.appkit-Popover-BottomArrow {
+.appkit-Popover-Arrow.appkit-Popover-DownArrow {
     bottom: -11px;
     left: 50%;
     margin-left: -11px;
@@ -73,7 +76,7 @@
     border-bottom-width: 0;
 }
 
-.appkit-Popover-BottomArrow:after {
+.appkit-Popover-DownArrow:after {
     content: " ";
     bottom: 1px;
     margin-left: -10px;
