color panel test

--- a/src/main/java/com/appkit/ui/client/widgets/input/slider/slider.css
+++ b/src/main/java/com/appkit/ui/client/widgets/input/slider/slider.css
@@ -3,7 +3,7 @@
 
     display: block;
     text-align: left;
-    background: #c5c5c5;
+    background-color: #c5c5c5;
     overflow: visible !important;
     border: 1px solid #b5b5b5;
     font-weight: normal !important;
