--- a/src/main/java/com/appkit/ui/client/widgets/button/button.css
+++ b/src/main/java/com/appkit/ui/client/widgets/button/button.css
@@ -39,6 +39,9 @@
     border-collapse: separate;
     border-spacing: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 
 }
 
