--- a/src/main/java/com/appkit/ui/client/widgets/input/color/colorpanel/colorpanel.css
+++ b/src/main/java/com/appkit/ui/client/widgets/input/color/colorpanel/colorpanel.css
@@ -103,12 +103,12 @@
     margin-left: 10px;
 }
 
-@sprite .appkit-ColorPanel-BrightnessSlider {
+@sprite .appkit-ColorPanel .appkit-ColorPanel-BrightnessSlider {
     gwt-image: "brightnessBar";
     other: property;
 }
 
-.appkit-ColorPanel-BrightnessSlider {
+.appkit-ColorPanel .appkit-ColorPanel-BrightnessSlider {
     width: 210px;
     margin-top: 30px;
     height: 21px;
@@ -121,26 +121,26 @@
     box-shadow: none;
 }
 
-.appkit-ColorPanel-BrightnessSlider .appkit-slider-handle {
+.appkit-ColorPanel .appkit-ColorPanel-BrightnessSlider .appkit-slider-handle {
     top: 0;
 }
 
-.appkit-ColorPanel-BrightnessSlider .appkit-slider-range {
+.appkit-ColorPanel .appkit-ColorPanel-BrightnessSlider .appkit-slider-range {
     display: none;
 }
 
-.appkit-ColorPanel-ColorSlider {
+.appkit-ColorPanel .appkit-ColorPanel-ColorSlider {
     width: 145px;
     margin-left: 8px;
 }
 
-.appkit-ColorPanel-ColorTextField {
+.appkit-ColorPanel .appkit-ColorPanel-ColorTextField {
     width: 40px;
     height: 25px;
     margin-left: 8px;
 }
 
-.appkit-ColorPanel-HexTextField {
+.appkit-ColorPanel .appkit-ColorPanel-HexTextField {
     width: 100px;
     height: 25px;
     margin-left: 10px;
