--- a/src/main/java/com/appkit/ui/client/widgets/windowpanel/windowpanel.css
+++ b/src/main/java/com/appkit/ui/client/widgets/windowpanel/windowpanel.css
@@ -8,6 +8,7 @@
     width: 120px;
     height: 120px;
     border: 1px border_color solid;
+    border-top: none;
     border-radius: 5px 5px 0 0;
     position: absolute !important;
     left: 0;
@@ -21,11 +22,11 @@
 
 .appkit-Window-panel-title {
 
-    height: 34px;
+    height: 30px;
     width: 100%;
     background-color: window_color;
     z-index: 2;
-    padding: 2px 0 2px 2px;
+    padding: 0px 0 2px 2px;
 
 }
 
