--- a/src/main/java/com/appkit/ui/client/widgets/menu/menubar.css
+++ b/src/main/java/com/appkit/ui/client/widgets/menu/menubar.css
@@ -1,9 +1,9 @@
 .appkit-MenuBar {
     width: 100%;
     height: 29px;
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #bbb;
-    border-top: 1px solid #f7f7f7;
+    background: linear-gradient(#ccd4db, #a9b2bb);
+    border-bottom: 1px solid #858c93;
+    border-top: 1px solid #ccd4db;
     box-sizing: border-box;
 
 }
@@ -16,7 +16,7 @@
     float: left;
     height: 28px;
     line-height: 18px;
-    color: #3f3f3f;
+    color: #444;
     margin: -1px 0;
     min-width: 32px;
     text-align: center;
@@ -25,7 +25,8 @@
     box-sizing: border-box;
     cursor: default;
     font-size: 13px;
-    text-shadow: none;
+    font-weight: bold;
+    text-shadow: 0 1px #ddd;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -36,14 +37,12 @@
     }
 }
 
-.appkit-menubar-item:hover {
-    background-color: #e5e5e5;
-}
-
 .appkit-menubar-item:focus,
 .appkit-menubar-item.appkit-state-selected {
-    background-color: #2076bd;
-    color: #fafafa;
+
+    color: #fff;
+    text-shadow: 0 1px #444;
+    background: #656e77;
     height: 29px;
     outline: none;
 
