--- a/src/main/java/com/appkit/ui/client/widgets/toolbar/toolbar.css
+++ b/src/main/java/com/appkit/ui/client/widgets/toolbar/toolbar.css
@@ -21,39 +21,43 @@
     height: 59px;
     width: auto;
     min-width: 36px;
-    display: inline-block;
-    margin: 0px 4px 0px 4px;
+    margin: 0px 5px 0 5px;
+    padding: 0;
     box-shadow: none;
     box-sizing: border-box;
-    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    top: 0;
     font-family: Arial, Helvetica, sans-serif;
 
 }
 
 .appkit-toolbar-item table {
-    height: 100%;
+    height: 42px;
     min-width: 100%;
 }
 
 .appkit-toolbar-item table td {
     height: auto;
     text-align: center;
+    vertical-align: middle;
 }
 
 .appkit-toolbar-item-label {
-    position: absolute;
+    position: relative;
     font-size: 11px;
     text-align: center;
     width: 100%;
-    bottom: 6px;
+    top: 0px;
     left: 0;
+    padding: 0 1px 0px 1px;
     box-sizing: border-box;
     cursor: default;
     color: rgba(0, 0, 0, 0.75);
 }
 
 .appkit-toolbar-button {
-    min-width: 40px;
+    min-width: 44px;
 
 }
 
