--- a/src/main/java/com/appkit/ui/client/widgets/toolbar/toolbar.css
+++ b/src/main/java/com/appkit/ui/client/widgets/toolbar/toolbar.css
@@ -1,4 +1,5 @@
 @external .appkit-toolbar-item;
+@external .gwt-Image;
 @external .appkit-toolbar-button, .mask, appkit-state-active, appkit-state-selected;
 @external .appkit-toolbar-flex;
 @external .appkit-toolbar-item-label;
@@ -59,6 +60,14 @@
 .appkit-toolbar-button {
     min-width: 44px;
 
+}
+
+.appkit-toolbar-button td {
+    position: relative;
+}
+
+.appkit-toolbar-button .gwt-Image {
+    vertical-align: middle;
 }
 
 .appkit-toolbar-button:focus {
