--- a/src/main/java/com/appkit/ui/client/widgets/windowpanel/windowpanel.css
+++ b/src/main/java/com/appkit/ui/client/widgets/windowpanel/windowpanel.css
@@ -15,18 +15,16 @@
     top: 0;
     z-index: 1001;
     background-color: window_color;
-    margin: 0;
     padding: 0;
+    outline: 0;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3), 0 3px 8px rgba(0, 0, 0, 0.2);
 }
 
 .appkit-Window-panel-title {
 
-    height: 30px;
-    width: 100%;
-    background-color: window_color;
-    z-index: 2;
-    padding: 0px 0 2px 2px;
+    padding: 0;
+    position: relative;
+    min-height: 30px;
 
 }
 
@@ -37,18 +35,15 @@
 .appkit-Window-panel .appkit-Window-panel-title-text {
     font-size: 14px;
     font-family: "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
-    margin-left: 5px;
-    margin-top: 6px;
-    position: relative;
-    float: left;
-    text-align: center;
+    margin: 6px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
 
 .appkit-Window-panel-button-pane {
-    position: absolute;
-    top: 0px;
-    right: 5px;
-    height: 24px;
+    float: right;
+    margin-right: 5px;
 }
 
 .appkit-Window-panel-restore,
@@ -169,7 +164,6 @@
 
 .appkit-Window-panel-close.appkit-state-active {
     background-color: #b01919 !important;
-
 }
 
 .appkit-Window-panel-restore.appkit-state-active,
@@ -188,14 +182,12 @@
 }
 
 .appkit-Window-panel-content {
-    position: absolute;
-    width: 100%;
-    top: 38px;
-    bottom: 0px;
-    left: 0px;
-    background-color: window_color;
+    position: relative;
+    border: 0;
     padding: 0;
     margin: 0;
+    background: none;
+    overflow: auto;
 }
 
 .appkit-Window-panel-overlay {
