--- a/src/main/java/com/appkit/ui/client/layouts/tabpanel/tabpanel.css
+++ b/src/main/java/com/appkit/ui/client/layouts/tabpanel/tabpanel.css
@@ -15,7 +15,7 @@
 @external .appkit-tabpanel-item, appkit-state-selected;
 
 .appkit-TabBar:focus .appkit-tabpanel-item.appkit-state-selected {
-    outline: 2px solid #faca0e;
+    outline: 2px solid #2065b9;
 }
 
 .appkit-TabBar.appkit-TabBar-TabsTop {
