--- a/src/main/java/com/appkit/ui/client/widgets/input/checkbox/checkbox.css
+++ b/src/main/java/com/appkit/ui/client/widgets/input/checkbox/checkbox.css
@@ -48,7 +48,7 @@
 }
 
 .appkit-state-focus .appkit-Checkbox-bezel {
-    outline: 2px solid #faca0e;
+    outline: 2px solid #2065b9;
 }
 
 .appkit-Checkbox-button-cell {
