--- a/src/main/java/com/appkit/ui/client/widgets/input/color/colorpanel/colorpanel.css
+++ b/src/main/java/com/appkit/ui/client/widgets/input/color/colorpanel/colorpanel.css
@@ -70,7 +70,7 @@
 }
 
 .appkit-ColorPanel-Toolbar-Btn:focus {
-    outline: 2px solid #faca0e;
+    outline: 2px solid #2065b9;
 }
 
 .appkit-ColorPanel-ValuePanel {
