--- a/src/main/java/com/appkit/ui/client/widgets/menu/menuitem.css
+++ b/src/main/java/com/appkit/ui/client/widgets/menu/menuitem.css
@@ -30,8 +30,8 @@
 .appkit-MenuItem-active {
     color: #fff;
     text-decoration: none;
-    background-color: #2076bd;
-    border-color: #2076bd;
+    background-color: #2065b9;
+    border-color: #2065b9;
 }
 
 .appkit-MenuItem-accessory {
