--- a/src/main/java/com/appkit/ui/client/widgets/toolbar/toolbar.css
+++ b/src/main/java/com/appkit/ui/client/widgets/toolbar/toolbar.css
@@ -71,7 +71,7 @@
 }
 
 .appkit-toolbar-button:focus {
-    outline: 2px solid #faca0e;
+    outline: 2px solid #2065b9;
 }
 
 .appkit-toolbar-button.appkit-state-active .appkit-toolbar-item-label {
