--- a/src/main/java/com/appkit/ui/client/layouts/accordion/accordion.css
+++ b/src/main/java/com/appkit/ui/client/layouts/accordion/accordion.css
@@ -19,7 +19,7 @@
 }
 
 .appkit-AccordionLayout-expandBtn:focus {
-    outline: 2px solid #faca0e;
+    outline: 2px solid #2065b9;
 }
 
 .appkit-AccordionLayout-expandBtn:hover {
@@ -49,7 +49,7 @@
 }
 
 .appkit-AccordionLayout-expandBtn.appkit-AccordionLayout-collapse:focus {
-    outline: 2px solid #faca0e;
+    outline: 2px solid #2065b9;
 }
 
 .appkit-AccordionLayout-expandBtn.appkit-AccordionLayout-collapse:hover {
