--- a/src/main/java/com/appkit/ui/client/widgets/input/text/textcontrol.css
+++ b/src/main/java/com/appkit/ui/client/widgets/input/text/textcontrol.css
@@ -33,7 +33,7 @@
 }
 
 .appkit-TextControl-input.appkit-state-active {
-    border: 2px solid #faca0e;
+    border: 2px solid #2065b9;
     padding: 4px;
 
 }
