--- a/src/main/java/com/appkit/ui/client/widgets/menu/menubar.css
+++ b/src/main/java/com/appkit/ui/client/widgets/menu/menubar.css
@@ -1,9 +1,9 @@
 .appkit-MenuBar {
     width: 100%;
     height: 29px;
-    background: linear-gradient(#ccd4db, #a9b2bb);
-    border-bottom: 1px solid #858c93;
-    border-top: 1px solid #ccd4db;
+    background: #3f3f3f;
+    border-bottom: 1px solid #202020;
+    border-top: 1px solid #3f3f3f;
     box-sizing: border-box;
 
 }
@@ -16,7 +16,7 @@
     float: left;
     height: 28px;
     line-height: 18px;
-    color: #444;
+    color: #f0f0f0;
     margin: -1px 0;
     min-width: 32px;
     text-align: center;
@@ -24,9 +24,8 @@
     background-color: transparent;
     box-sizing: border-box;
     cursor: default;
-    font-size: 13px;
-    font-weight: bold;
-    text-shadow: 0 1px #ddd;
+    font-size: 14px;
+    text-shadow: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -41,8 +40,8 @@
 .appkit-menubar-item.appkit-state-selected {
 
     color: #fff;
-    text-shadow: 0 1px #444;
-    background: #656e77;
+    text-shadow: none;
+    background-color: #2065b9;
     height: 29px;
     outline: none;
 
