--- a/src/main/java/com/appkit/ui/client/widgets/windowpanel/windowpanel.css
+++ b/src/main/java/com/appkit/ui/client/widgets/windowpanel/windowpanel.css
@@ -75,7 +75,7 @@
 .appkit-Window-panel-min:focus,
 .appkit-Window-panel-max:focus,
 .appkit-Window-panel-close:focus {
-    outline: 2px solid #faca0e;
+    outline: 2px solid #2065b9;
 }
 
 .appkit-Window-panel-restore,
