--- a/src/main/java/com/appkit/ui/client/widgets/button/button.css
+++ b/src/main/java/com/appkit/ui/client/widgets/button/button.css
@@ -13,22 +13,21 @@
     height: 28px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
-    border-radius: 4px;
+    border-radius: 2px;
     min-height: 10px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
     color: #333333;
+    transition: background-color 0.2s, color 0.2s, opacity 0.2s;
 
 }
 
 .appkit-Button:focus {
-    outline: 2px solid #2065b9;
+    outline: 2px solid #1082d8;
 }
+
 
 .appkit-Button-content-wrap {
 
@@ -109,29 +108,28 @@
 }
 
 .appkit-Button.primary {
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
-    background-color: #2076bd;
+    background-color: #0277bd;
     color: #fff;
-    border-color: #1b64a0;
+    border: 0;
 }
 
 .appkit-Button.info {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
     background-color: #4390df;
-    border-color: #3c7bc3;
+    border: 0;
     color: #ffffff;
 }
 
 .appkit-Button.success {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
     background-color: #60a917;
-    border-color: #539b17;
+    border: 0;
     color: #ffffff;
 }
 
 .appkit-Button.warning {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
-    border-color: #e16200;
+    border: 0;
     background-color: #fa6800;
     color: #ffffff;
 }
@@ -139,14 +137,14 @@
 .appkit-Button.danger {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
     color: #fafafa;
-    border: 1px solid #d43f3a;
+    border: 0;
     background-color: #c75050;
 }
 
 .appkit-Button.inverse {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
     background-color: #3f3f3f;
-    border-color: #000;
+    border: 0;
     color: #ffffff;
 }
 
@@ -154,7 +152,7 @@
     text-shadow: none;
     background-color: transparent;
     color: #2e92cf;
-    border: none !important;
+    border: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
 }
@@ -162,8 +160,7 @@
 .appkit-Button.link.appkit-state-active {
     color: #236590;
     background-color: transparent;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
+
 }
 
 .appkit-Button.link .appkit-Button-title:hover {
@@ -171,9 +168,9 @@
 }
 
 .appkit-Button.appkit-state-active {
-    background-color: #e0e0e0;
-    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    background-color: #e5e5e5;
+    -webkit-box-shadow: inset 0 3px 5px rgba(50, 50, 50, .125);
+    box-shadow: inset 0 3px 5px rgba(50, 50, 50, .125);
 }
 
 .appkit-Button.primary.appkit-state-active {
@@ -195,7 +192,7 @@
 
 .appkit-Button.inverse.appkit-state-active {
     background-color: #616161;
-    border-color: #333;
+    border: 0;
 }
 
 .appkit-Button.success.appkit-state-active {
