--- a/src/main/java/com/appkit/ui/client/widgets/input/color/colorpanel/colorpanel.css
+++ b/src/main/java/com/appkit/ui/client/widgets/input/color/colorpanel/colorpanel.css
@@ -5,6 +5,7 @@
     padding: 0;
     height: 100%;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .appkit-ColorPanel .gwt-Label {
@@ -70,7 +71,7 @@
 }
 
 .appkit-ColorPanel-Toolbar-Btn:focus {
-    outline: 2px solid #2065b9;
+    outline: 2px solid #1082d8;
 }
 
 .appkit-ColorPanel-ValuePanel {
