--- a/src/main/java/com/appkit/ui/client/widgets/menu/menubar.css
+++ b/src/main/java/com/appkit/ui/client/widgets/menu/menubar.css
@@ -1,9 +1,9 @@
 .appkit-MenuBar {
     width: 100%;
     height: 29px;
-    background: #3f3f3f;
-    border-bottom: 1px solid #202020;
-    border-top: 1px solid #3f3f3f;
+    background: linear-gradient(#454545, #3f3f3f);
+    border-bottom: 1px solid #111;
+    border-top: 1px solid #4f4f4f;
     box-sizing: border-box;
 
 }
