--- a/src/main/java/com/appkit/ui/client/widgets/toolbar/toolbar.css
+++ b/src/main/java/com/appkit/ui/client/widgets/toolbar/toolbar.css
@@ -8,8 +8,8 @@
 .appkit-Toolbar {
     width: 100%;
     height: 59px;
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #bbb;
+    background-color: #f0f0f0;
+    border-bottom: 1px solid #b0b0b0;
     padding-left: 5px;
     padding-right: 5px;
     box-sizing: border-box;
@@ -71,7 +71,7 @@
 }
 
 .appkit-toolbar-button:focus {
-    outline: 2px solid #2065b9;
+    outline: 2px solid #1082d8;
 }
 
 .appkit-toolbar-button.appkit-state-active .appkit-toolbar-item-label {
