--- a/src/main/java/com/appkit/ui/client/layouts/accordion/accordion.css
+++ b/src/main/java/com/appkit/ui/client/layouts/accordion/accordion.css
@@ -63,7 +63,7 @@
 .gwt-StackLayoutPanelHeader {
     background-color: #e5e5e5;
     color: #555;
-    padding: 5px;
+    padding: 4px 5px 5px 5px;
     height: 28px;
     font-size: 14px;
     box-sizing: border-box;
